js/js.translator/testData/incremental/invalidation/interfaceSuperUsage/lib1/Interface.0.kt
private var myProperty: Int? = null

interface Interface {
    var someVar: Int?
        get() = myProperty
        set(value) {
            myProperty = value
        }
}
